IntershipFirstProject/force-app/main/default/objects/Shop_product__c/Shop_product__c.object-meta.xml
<CustomObject>
    <label>Shop product</label>
    <nameField>
        <label>Shop product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>