IntershipFirstProject/force-app/main/default/objects/Shop_product__c/fields/Blurb__c.field-meta.xml
<CustomField>
    <fullName>Blurb__c</fullName>
    <label>Blurb</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>