IntershipFirstProject/force-app/main/default/objects/Shop_product__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <displayFormat>PID-{00000}</displayFormat>
    <label>ProductID</label>
    <type>AutoNumber</type>
</CustomField>